<resources>
    <string name="app_name">Example Application</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_label">Welcome to the examples</string>
    <string name="btntxt_navigation">Navigation example</string>
    <string name="btntxt_menuexample">Menu example</string>
    <string name="btntxt_layout">Layout example</string>
    <string name="title_activity_nav_examples">NavExamples</string>

    <string name="hello_world">Hello world!</string>
    <string name="navigation_headline">Navigation Example</string>
    <string name="btntxt_navsimplewithouthier">Simple navigation without hierarchy</string>
    <string name="btntxt_simplenavwh">Simple navigation with hierarchy</string>
    <string name="btntxt_navwithresponse">Navigation with response</string>
    <string name="title_activity_menu_example">Menu Example</string>
    <string name="menu_headline">Menu Example</string>
    <string name="menu_add">Add</string>
    <string name="title_activity_layout_example">LayoutExample</string>
    <string name="title_activity_layout_examples">LayoutExamples</string>
    <string name="lbl_hdl_layout_examples">Layout Examples</string>
    <string name="btntxt_layout_absolut">Absolut Layout</string>
    <string name="btntxt_layout_frame">Frame Layout</string>
    <string name="btntxt_layout_linear">Linear Layout</string>
    <string name="btntxt_table_layout">Table Layout</string>
    <string name="btntxt_layout_realtiv">Relativ Layout</string>
    <string name="title_activity_broadcast_example">BroadcastExample</string>
    <string name="btntxt_braodcast">Broadcast Excample</string>
    <string name="btntxt_broadcast_send">Send Broadcast</string>
    <string name="title_activity_service_example">ServiceExample</string>
    <string name="lbl_hdl_service_example">Service Example</string>
    <string name="btntxt_start_service">Start Service</string>
    <string name="btntxt_stop_service">Stop Service</string>
    <string name="btntxt_service">Service Example</string>
    <string name="title_activity_simple_navigation_example">SimpleNavigationExample</string>
    <string name="lbl_hdl_simple_nav_target">Simple Navigation Target</string>
    <string name="title_activity_simple_navigation_with_hierachy">SimpleNavigationWithHierachy
    </string>
    <string name="lbl_hdl_simple_nav_target_w_hierachy">Simple Navigation Target with Hierachy</string>
    <string name="title_activity_navigation_with_question_and_response">
        NavigationWithQuestionAndResponse
    </string>
    <string name="lbl_hdl_nav_question_and_response">Question and Response</string>
    <string name="btn_txt_answer_question">Send answer</string>
    <string name="lbl_hdl_question">Ask a question:</string>
</resources>
