<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="de.mubn.vorlesung.beispielapplikation.NavExamples"
android:orientation="vertical">

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/navigation_headline"
    android:gravity="center"
    android:id="@+id/nav_headline" />


<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btntxt_navsimplewithouthier"
    android:id="@+id/btn_simplenavwoh"
    android:onClick="onClick" />

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btntxt_simplenavwh"
    android:id="@+id/btn_simplenavwh"
    android:onClick="onClick"/>

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btntxt_navwithresponse"
    android:id="@+id/btn_navwithresponse"
    android:onClick="onClick" />


</LinearLayout>
